1998-06-11  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-x-checks.m4 (USE_DEVGTK): Use AC_EGREP_CPP rather than
	AC_CHECK_HEADER.  AC_CHECK_HEADER is fooled by warnings.

	* gnome-support.m4 (AC_PROG_AWK): Look for awk.
	(CROSS_COMPILING): Remove conditional.
	
Wed Jun 10 14:19:39 EDT 1998 Gregory McLean <gregm@comstar.net>

	* gnome-x-checks.m4: More tweeks to make building against gtk 1.0
	  and gtk1.1 less painful.

1998-06-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-support.m4 (CROSS_COMPILING): New automake conditional;
	(need_gnome_support): added `AC_SUBST(need_gnome_support)'.

1998-06-07  Martin Baulig  <martin@home-of-linux.org>

	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): When
	cross-compiling, we now check for `$host_alias-buile-guile'.

1998-06-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): Looks also
	in $GNOME_LIBDIR; added failflag: GNOME_CHECK_GUILE(fail)
	will abort if guile cannot be found.

1998-05-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_HOOK):
	(libgtop_use_machine_h): Set this to true on SunOS.

1998-05-22  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-fileutils.m4 (GNOME_FILEUTILS_CHECKS): New file.
	Imported from `configure.in' in GNU fileutils 3.16. It does
	all the checks that are needed for the diskusage applet.

1998-05-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_HOOK): New file.
	Checks whether libgtop is installed and reads its `libgtopConf.sh'
	file if it can be found. Defines HAVE_LIBGTOP on success and
	provides HAVE_LIBGTOP automake conditional.

1998-05-21  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_SYSDEPS): New file.
	(libgtop_sysdeps_dir): sysdeps directory libgtop uses.
	(libgtop_use_machine_h): define HAVE_GLIBTOP_MACHINE_H if this
	is `yes'.
	(libgtop_need_server): we only need the libgtop server, when